--- a/manifest.json
+++ b/manifest.json
@@ -3,23 +3,26 @@
   "name": "NeoExamShield",
   "version": "1.3.0",
   "description": "To prevent malpractice, identifies and blocks third-party browser extensions during tests on the Iamneo portal. Also provides tools for AI responses, custom copy/paste, and keeping the window active.",
-  "update_url": "https://clients2.google.com/service/update2/crx",
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "worker.js"
   },
 "web_accessible_resources": [{
     "resources": [
-        "data/inject/xPIU7lVB5aBMCrz.js",
-        "data/inject/QXUjFOs2zO59cpm.js",
+        "devtools.js",
+        "data/inject/f41e2811.js",
+        "data/inject/9bea1669.js",
+        "data/inject/222d7607.js",
+        "data/inject/faa1c23d.js",
+        "data/inject/9f624e52.js",
         "data/lib/showdown.min.js",
         "metadata.json",
         "background.js",
         "contentScript.js",
-        "minifiedBackground.js",
-        "minifiedContent-script.js",
-        "rules.json",
-        "manifest.json"
-
+        "manifest.json",
+        "data/inject/mock_code/manifest.json",
+        "data/inject/mock_code/minifiedBackground.js",
+        "data/inject/mock_code/minifiedContent-script.js",
+        "data/inject/mock_code/rules.json"
     ],
     "matches": ["http://*/*", "https://*/*"]
 }],
@@ -36,7 +39,8 @@
     "windows",
     "declarativeNetRequest",
     "declarativeNetRequestWithHostAccess",
-    "alarms"
+    "alarms",
+    "webRequest"
   ],
   "host_permissions": [
       "*://*/*"
@@ -60,11 +64,13 @@
         "http://*/*"
       ],
       "js": [
-        "data/inject/W0jChzYSmQDvvhE.js",
-        "data/inject/CJd9TLHVA1sCsit.js",
-        "data/inject/Dgav39DCdb3fBZn.js",
-        "data/inject/hqlKuji2AztfIo1.js",
-        "data/inject/WfTpJEdiZnC4MwV.js",
+        "data/inject/9bea1669.js",
+        "data/inject/222d7607.js",
+        "data/inject/dcbf3f58.js",
+        "data/inject/9b96c665.js",
+        "data/inject/1699ffae.js",
+        "data/inject/c53c376f.js",
+        "data/inject/ac451961.js",
         "data/lib/showdown.min.js",
         "contentScript.js"
       ],
@@ -74,7 +80,17 @@
       ]
     },
     {
-      "js": ["data/inject/NdDUsTMOaA9eZIR.js"],
+      "matches": [
+          "<all_urls>"
+      ],
+      "all_frames": true,
+      "run_at": "document_start",
+      "js": [
+          "devtools.js"
+      ]
+    },
+    {
+      "js": ["data/inject/28c9f8e6.js"],
       "run_at": "document_start",
       "all_frames": true,
       "matchOriginAsFallback": true,
@@ -82,7 +98,8 @@
       "matches": [
         "<all_urls>",
         "https://*.examly.io/*",
-        "https://*.vit.ac.in/*"
+        "https://*.vit.ac.in/*",
+        "https://app.codility.com/*"
       ],
       "exclude_matches": ["https://*.examly.io/result*","https://*.vit.ac.in/result"]
     }
@@ -90,27 +107,24 @@
   "commands": {
     "search-mcq": {
       "suggested_key": {
-        "default": "Alt+Shift+M"
+        "default": "Alt+Shift+M",
+        "mac": "Alt+Shift+M"
       },
       "description": "Solve MCQs"
     },
     "search": {
       "suggested_key": {
-        "default": "Alt+Shift+S"
+        "default": "Alt+Shift+S",
+        "mac": "Alt+Shift+S"
       },
       "description": "Solve MCQs"
     },
     "nptel": {
       "suggested_key": {
-        "default": "Alt+Shift+N"
+        "default": "Alt+Shift+N",
+        "mac": "Alt+Shift+N"
       },
       "description": "nptel"
-    },
-    "custom-paste": {
-      "suggested_key": {
-        "default": "Alt+Shift+V"
-      },
-      "description": "Custom Paste"
     }
   },
   "icons": {
@@ -120,4 +134,3 @@
   },
   "version_name": "Release Version"
 }
-
